# Spanish-Checker-CLI

./: Cargo.toml  README.md  test.txt  test2.txt
src/: main.rs
